--- a/TorF/res/layout/activity_main.xml
+++ b/TorF/res/layout/activity_main.xml
@@ -76,16 +76,59 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size"
             android:typeface="sans" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="horizontal" >
+        <LinearLayout
+            android:id="@+id/sign_in_bar"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:background="#f0f0f0"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="@string/sign_in_why"
+                android:textColor="#808080"
+                android:textSize="@dimen/text_size_small" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/sign_out_bar"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:background="#f0f0f0"
+            android:gravity="center|right"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="you are signed in"
+                android:textColor="#808080"
+                android:textSize="@dimen/text_size_small" />
+
+            <Button
+                android:id="@+id/sign_out_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="sign out"
+                android:textSize="@dimen/text_size_small" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
