--- a/TorF/res/values-sw800dp/dimens.xml
+++ b/TorF/res/values-sw800dp/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="button_height">160dp</dimen>
     <dimen name="button_margin">12dp</dimen>
     <dimen name="text_size">40sp</dimen>
+    <dimen name="text_size_small">20sp</dimen>
 
 </resources>
