--- a/TorF/res/values/dimens.xml
+++ b/TorF/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="button_height">80dp</dimen>
     <dimen name="button_margin">6dp</dimen>
     <dimen name="text_size">20sp</dimen>
+    <dimen name="text_size_small">10sp</dimen>
 
 </resources>
