--- a/TorF/res/values/dimens.xml
+++ b/TorF/res/values/dimens.xml
@@ -5,9 +5,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="header">70dp</dimen>
     <dimen name="button_width">300dp</dimen>
+    <dimen name="button_width_sigin">100dp</dimen>
     <dimen name="button_height">80dp</dimen>
     <dimen name="button_margin">6dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="text_size_small">10sp</dimen>
+    <dimen name="button_height_signin">50dp</dimen>
 
 </resources>
