--- a/TorF/res/layout/quizscreen.xml
+++ b/TorF/res/layout/quizscreen.xml
@@ -236,4 +236,12 @@
         </LinearLayout>
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/gps_popup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
+
 </LinearLayout>
