--- a/TorF/res/values/dimens.xml
+++ b/TorF/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="button_margin">6dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="text_size_small">10sp</dimen>
+    <dimen name="text_size_medium">15sp</dimen>
     <dimen name="button_height_signin">50dp</dimen>
 
 </resources>
